Fix flashing text synx issue

--- a/src/css/ansi.scss
+++ b/src/css/ansi.scss
@@ -24,7 +24,7 @@
 	}
 }
 
-.ansi-blink {
+.animate .ansi-blink {
 	text-decoration: blink;
 	animation-name: blinker;
 	animation-iteration-count: infinite;
