--- a/src/css/editorcontent.scss
+++ b/src/css/editorcontent.scss
@@ -95,7 +95,7 @@
 	}
 }
 
-.flash {
+.animate .flash {
 	animation-name: blinker;
 	animation-iteration-count: infinite;
 	animation-timing-function: cubic-bezier(1.0, 0, 0, 1.0);
