Fix typos and add allow negative #s in xp needed

--- a/src/css/status.scss
+++ b/src/css/status.scss
@@ -316,7 +316,7 @@ body
     right: 5px; 
 }
 
-#experiance
+#experience
 {
     position: absolute;
     top:350px;
@@ -329,12 +329,12 @@ body
     text-align: left;
 }
 
-#experiance div span:first-child{
+#experience div span:first-child{
     width: 74px;
     display: inline-block;
 }
 
-#experiance div span:nth-child(2){
+#experience div span:nth-child(2){
     text-align: right;
     float: right;
     padding-right: 2px;
