Change advanced editor color selection to limit to 16 standard colors with an option to open a more advanced dialog to help speed up advanced menu loading

--- a/src/css/editor.scss
+++ b/src/css/editor.scss
@@ -161,6 +161,10 @@ i.mce-i-fa-open:before {
 	}
 }
 
+.mce-custom-color-btn div {
+    text-align: center;
+}
+
 /**color icon start**/
 
 .mce-i-sm-icon {
