Add context menu to mapper, fix bugs with removing rooms and other minor bugs

--- a/src/css/mapper.scss
+++ b/src/css/mapper.scss
@@ -149,3 +149,8 @@ a.disabled-link:hover {
 	background-color: transparent !important;
 	cursor: default;
 }
+
+#select-area
+{
+	max-width: 150px;
+}
