--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,5 +1,4 @@
-$images : './../../assets';
-
+$images: './../../assets';
 body {
     -webkit-user-select: none;
     user-select: none;
@@ -233,3 +232,139 @@ a.icon:active {
 ::-webkit-scrollbar-corner {
     background-color: black;
 }
+
+#find {
+    position: absolute;
+    top: 5px;
+    right: 20px;
+    color: #BBBBBB;
+    background-color: black;
+    border: 1px solid #555;
+    padding: 2px;
+    display: none;
+    z-index: 100;    
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+    border-radius: 4px;
+}
+
+#find input, #find input:focus {
+    border: 1px solid #555;
+    width: 100px;
+    background-color: black;
+    color: silver;
+    padding: 2px 2px;
+    outline: none;
+    height: 16px;
+}
+
+#find input:focus {
+    border: 1px solid #0052A4;
+    position: relative;
+    top: -1px;    
+}
+
+#find button .fa {
+    margin-top: 3px;
+}
+
+#find button {
+    width: 22px;
+    height: 22px;
+    display: inline-block;
+    border: 1px solid transparent;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    vertical-align: top;
+    line-height: 16px;
+    color: inherit;
+    background-color: inherit;
+    padding: 0px;
+    outline: none;
+    margin-left: 2px;
+    margin-right: 2px;
+    border-radius: 2px;
+}
+
+#find button:hover, #find button.active:hover {
+    cursor: default;
+    border: 1px solid white;
+}
+
+#find button:active {
+    cursor: default;
+    border: 1px solid #0052A4;    
+}
+
+#find button:disabled, #find button:disabled:hover {
+    border: 1px solid transparent;
+    color: #555;
+    background-color: inherit;
+}
+
+#find button.active
+{
+    cursor: default;
+    border: 1px solid #0052A4;   
+    background: rgba(0,82,164, 0.7)  
+}
+
+#find-count {
+    width: 75px;
+    display: inline-block;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 4px;
+    text-align:center;
+}
+
+#find-case {
+    font-size: 10px;
+}
+
+#find-word {
+    text-decoration: overline underline;
+    font-size: 10px;
+}
+
+#find-regex, #find-selection {
+    display: none !important;
+}
+
+
+.find-highlight{
+    /*
+    background: rgba(128,128,128, 0.5);
+    border-bottom: 1px solid silver;
+    border-top: 1px solid silver;
+    */
+    border-radius: 4px;
+    background: rgba(51,153,255,0.60);
+    border-bottom: 1px solid #3399ff;
+    border-top: 1px solid #3399ff;
+}
+
+.find-highlight.start, .find-highlight.current.start {
+    border-radius: 4px 0px 0px 4px;
+}
+
+.find-highlight.middle, .find-highlight.current.middle {
+    border-radius: 0px;
+}
+
+.find-highlight.end, .find-highlight.current.end, {
+    border-radius: 0px 4px 4px 0px;
+}
+
+.find-no-results {
+    color: #F08080
+}
+
+.find-highlight.current
+{
+    border-radius: 4px;
+    background: rgba(116, 192, 114,0.60);
+    border-bottom: 1px solid #74C072;
+    border-top: 1px solid #74C072;
+}
+
+
