--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -11,7 +11,6 @@ body {
     bottom: 31px;
     position: absolute;
     color: #BBBBBB;
-    border: 0px solid silver;
     font-family: "Courier New", monospace;
     font-size: 1em;
     text-align: left;
@@ -238,30 +237,33 @@ a.icon:active {
     top: 5px;
     right: 20px;
     color: #BBBBBB;
-    background-color: black;
-    border: 1px solid #555;
     padding: 2px;
     display: none;
     z-index: 100;    
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
     border-radius: 4px;
+    border: 1px solid #908271;
+    background-color: rgb(40, 0, 0);
 }
 
 #find input, #find input:focus {
-    border: 1px solid #555;
+    border: 1px solid #908271;
     width: 100px;
-    background-color: black;
+    background-color: inherit;
     color: silver;
     padding: 2px 2px;
     outline: none;
     height: 16px;
+    position: relative;
+    top: -1px;    
+    border-radius: 2px;
 }
 
 #find input:focus {
-    border: 1px solid #0052A4;
-    position: relative;
-    top: -1px;    
+    border: 1px solid maroon;
+    color: wheat;
+    background: rgba(128, 0, 0, 0.5);
 }
 
 #find button .fa {
@@ -288,7 +290,9 @@ a.icon:active {
 
 #find button:hover, #find button.active:hover {
     cursor: default;
-    border: 1px solid white;
+    border: 1px solid wheat;    
+    background-color: #d70000;
+    color: wheat;    
 }
 
 #find button:active {
@@ -305,8 +309,9 @@ a.icon:active {
 #find button.active
 {
     cursor: default;
-    border: 1px solid #0052A4;   
-    background: rgba(0,82,164, 0.7)  
+    border: 1px solid maroon;   
+    background: rgba(128, 0, 0, 0.5);
+    color: wheat;
 }
 
 #find-count {
