--- a/src/themes/default.scss
+++ b/src/themes/default.scss
@@ -1,4 +1,5 @@
 $images: "./../../assets";
+$borderColor: "#908271";
 
 #display-container {
     left: 35px;
@@ -11,7 +12,7 @@ $images: "./../../assets";
     font-size: 1em;
     background-color: black;
     text-shadow: none;
-    border: 1px solid #908271;
+    border: 1px solid #{$borderColor}#{$borderColor};
     padding: 0px;
 }
 
@@ -138,7 +139,7 @@ $images: "./../../assets";
     background: #33302b;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-    border: 1px solid #908271;
+    border: 1px solid #{$borderColor};
 }
 
 #display::-webkit-scrollbar-thumb:window-inactive, #bars::-webkit-scrollbar-thumb:window-inactive {
@@ -157,12 +158,12 @@ $images: "./../../assets";
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
     border-radius: 4px;
-    border: 1px solid #908271;
+    border: 1px solid #{$borderColor};
     background-color: rgb(40, 0, 0);
 }
 
 #find input, #find input:focus {
-    border: 1px solid #908271;
+    border: 1px solid #{$borderColor};
     width: 100px;
     background-color: inherit;
     color: silver;
@@ -275,7 +276,7 @@ $images: "./../../assets";
     top: 7px;
     bottom: 7px;
     background-color: rgb(40, 0, 0);
-    border: 1px solid #908271;
+    border: 1px solid #{$borderColor};
     padding: 2px;
 }
 
@@ -398,7 +399,7 @@ $images: "./../../assets";
     left: 3px;
     right: 3px;
     background-color: black;
-    border: 1px solid #908271;
+    border: 1px solid #{$borderColor};
 }
 
 #character-name {
@@ -470,7 +471,7 @@ $images: "./../../assets";
 #lefthandweapon {
     top: 85px;
     background-color: black;
-    border: 1px solid #908271;
+    border: 1px solid #{$borderColor};
     width: 32px;
     height: 32px;
     left: 5px;
@@ -479,7 +480,7 @@ $images: "./../../assets";
 #righthandweapon {
     top: 85px;
     background-color: black;
-    border: 1px solid #908271;
+    border: 1px solid #{$borderColor};
     width: 32px;
     height: 32px;
     right: 5px;
@@ -490,7 +491,7 @@ $images: "./../../assets";
     right: 3px;
     left: 3px;
     background-color: black;
-    border: 1px solid #908271;
+    border: 1px solid #{$borderColor};
     padding: 2px;
     color: wheat;
     text-align: left;
@@ -536,7 +537,7 @@ $images: "./../../assets";
     width: 32px;
     float: left;
     background-color: black;
-    border: 1px solid #908271;
+    border: 1px solid #{$borderColor};
 }
 
 .combat-bar .progressbar {
@@ -555,7 +556,7 @@ $images: "./../../assets";
     right: 3px;
     left: 3px;
     background-color: black;
-    border: 1px solid #908271;
+    border: 1px solid #{$borderColor};
     padding: 2px;
 }
 
@@ -570,7 +571,7 @@ $images: "./../../assets";
 #armor, #health, #health.on:hover, #armor.on:hover {
     top: 2px;
     background-color: black;
-    border: 1px solid #908271;
+    border: 1px solid #{$borderColor};
     padding: 0px;
     height: 18px;
     width: 18px;
@@ -709,7 +710,7 @@ $images: "./../../assets";
 .progressbar {
     height: 12px;
     font-size: 0.75em;
-    border: 1px solid #908271;
+    border: 1px solid #{$borderColor};
     height: 12px;
     width: 118px;
     -webkit-border-radius: 6px;
@@ -750,7 +751,7 @@ $images: "./../../assets";
 }
 
 #party.hasmembers {
-    border-bottom: 1px solid #908271;
+    border-bottom: 1px solid #{$borderColor};
     padding-bottom: 4px;
 }
 
